# haskell_server

./: .gitignore  README.md  haskell_server.cabal  snap_project.cabal
src-bench/: MainBenchmarkSuite.hs
src-lib/: ParallelExercise.hs  WarmupExercises.hs
src-test/: Spec.hs  TestRunner.hs  WarmupExercisesSpec.hs
