Name:                haskellserver
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Library
  hs-source-dirs: src-lib
  Default-Language:     Haskell2010
  Build-depends: base
               , time == 1.5.0.1
               , parallel
  exposed-modules: ParallelExercise

-- test-suite is new in cabal 1.10
Test-Suite my-tests
  type: exitcode-stdio-1.0
  Default-Language:     Haskell2010
  hs-source-dirs: src-test, src-lib
  main-is: Spec.hs
  -- because test suite imports library stuff, most dependencies in
  -- library needs to be in test dependencies as well
  Build-depends: base
               , QuickCheck == 2.8.*
               , regex-posix == 0.95.2
               , time == 1.5.0.1
               , containers == 0.5.5.1
               , hspec
               , hspec-discover

-- cabal configure --enable-benchmarks
benchmark my-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src-lib, src-bench
  main-is:          MainBenchmarkSuite.hs
  build-depends:    base,
                    criterion,
                    random
  ghc-options:      -Wall
                    -O2


Executable snapserver
  Default-Language:     Haskell2010
  hs-source-dirs: src-server
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
